--- a/src/app/header/header-popup/login/login.component.css
+++ b/src/app/header/header-popup/login/login.component.css
@@ -38,6 +38,13 @@
     display: flex;
 }
 
+.oauth-button {
+    height: 50px;
+    width: 250px;
+    border: #ffffff;
+    background-color: #ffffff;
+}
+
 .separator-line {
     justify-content: center;
     align-content: center;
