--- a/src/app/header/header-popup/login/login.component.html
+++ b/src/app/header/header-popup/login/login.component.html
@@ -36,9 +36,20 @@
                 <div class="line"></div>
             </div>
             <div class="col-lg-6 authentication-body">
-                <p>Google</p>
-                <p>Linkedin</p>
-                <p>Github</p>
+                <button mat-button 
+                class="oauth-button d-flex justify-content-center align-items-center" 
+                (click)="onGoogleLogin()">
+                    <mat-icon style="width: 50px; height:30px"
+                              svgIcon="google-logo"></mat-icon> 
+                    Login With Google
+                </button>
+                <button mat-button 
+                class="oauth-button d-flex justify-content-center align-items-center"
+                (click)="onGithubLogin()">
+                    <mat-icon style="width: 50px; height:30px"
+                              svgIcon="github-logo"></mat-icon> 
+                    Login With Github
+                </button>
             </div>
         </div>
     </div>
