--- a/src/app/header/header-popup/signup/signup.component.css
+++ b/src/app/header/header-popup/signup/signup.component.css
@@ -42,6 +42,14 @@
     display: flex;
 }
 
+.oauth-button {
+    height: 50px;
+    width: 250px;
+    border: #ffffff;
+    background-color: #ffffff;
+}
+
+
 .separator-line {
     justify-content: center;
     align-content: center;
