--- a/src/app/header/header-popup/login/login.component.html
+++ b/src/app/header/header-popup/login/login.component.html
@@ -34,6 +34,7 @@
                                    placeholder="Password">
                         </div>
                         <button class="btn"
+                                [disabled]="loginForm.invalid"
                                 type="submit">
                             Login
                         </button>
