--- a/src/app/header/header-slider/nav-slider/nav-slider.component.css
+++ b/src/app/header/header-slider/nav-slider/nav-slider.component.css
@@ -56,6 +56,11 @@
     width: 45px;
 }
 
+.profile-picture {
+    border-radius: 50%;
+    border: 2px solid #ffffff;
+}
+
 .profile .profile-btn {
     display: flex;
     border: 5px solid #ffffff;
@@ -63,10 +68,10 @@
     justify-content: center;
     align-items: center;
     color: #ffffff;
-    height: 45px;
-    width: 45px;
+    height: 50px;
+    width: 50px;
 }
 
 .profile .profile-btn fa-icon {
-    font-size: 25px;
+    font-size: 28px;
 }
