Initial Implementation of Help and My Profile Popup

--- a/src/app/header/header-dropdown/header-dropdown.component.html
+++ b/src/app/header/header-dropdown/header-dropdown.component.html
@@ -26,13 +26,13 @@
             </li>
         </ul>
         <ul class="user-management" *ngIf="this.user">
-            <li class="dropdown-item">
+            <li class="dropdown-item" (click)="onMyProfileClicked()">
                 <div class="icon-box">
                     <fa-icon class="fas fa-user" [icon]="userIcon"></fa-icon>
                 </div>
                 <p>My Profile</p>
             </li>
-            <li class="dropdown-item">
+            <li class="dropdown-item" (click)="onHelpClicked()">
                 <div class="icon-box">
                     <fa-icon class="fas fa-question-circle" [icon]="questionCircleIcon"></fa-icon>
                 </div>
