Better and Responsive Picture Selector

--- a/src/app/header/header-popup/my-profile/my-profile.component.css
+++ b/src/app/header/header-popup/my-profile/my-profile.component.css
@@ -2,13 +2,7 @@
     margin: 0;
 }
 
-.profile-container .row {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.profile-container {
+.profile-options-container {
     justify-content: space-around;
     display: flex !important;
     flex-direction: column;
@@ -16,6 +10,14 @@
     align-items: center;
     height: 200px;
     max-width: 400px;
+}
+
+.profile-options-row {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
 }
 
 .separator-line {
@@ -33,7 +35,7 @@
     border-radius: 50px;
 }
 
-.profile-container button {
+.profile-options-container button {
 
     text-decoration: none;
     border-radius: 8px;
@@ -56,7 +58,7 @@
 
 @media (min-width:767px) {
 
-    .profile-container {
+    .profile-options-container {
         all: unset;
         justify-content: space-around;
         width: 600px;
@@ -65,7 +67,7 @@
         height: 200px;
     }
 
-    .profile-container .row {
+    .profile-options-container .row {
         all: unset;
         display: flex;
         height: 200px;
